--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -17,8 +17,11 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install dependencies
-        run: npm install minimatch @octokit/rest
+        run: pnpm install
 
       - name: Apply labels
         run: node scripts/apply-labels.js
