--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -24,8 +24,38 @@ jobs:
         run: pnpm install
 
       - name: Apply labels
-        run: node scripts/apply-labels.js
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const path = require('path');
+            const minimatch = require('minimatch');
+            const rulesPath = path.join(__dirname, '../label-rules.json');
+            const rules = JSON.parse(fs.readFileSync(rulesPath, 'utf8')).rules;
+
+            const { data: files } = await github.pulls.listFiles({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number
+            });
+
+            const labels = new Set();
+            for (const file of files) {
+              for (const rule of rules) {
+                for (const pattern of rule.patterns) {
+                  if (minimatch(file.filename, pattern)) {
+                    labels.add(rule.label);
+                  }
+                }
+              }
+            }
+
+            if (labels.size > 0) {
+              await github.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                labels: Array.from(labels)
+              });
+            }
