--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18.12.0'  # Update to Node.js v18.12.0 or later
 
       - name: Install pnpm
         run: npm install -g pnpm
@@ -24,38 +24,8 @@ jobs:
         run: pnpm install
 
       - name: Apply labels
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const path = require('path');
-            const minimatch = require('minimatch');
-            const rulesPath = path.join(__dirname, '../label-rules.json');
-            const rules = JSON.parse(fs.readFileSync(rulesPath, 'utf8')).rules;
-
-            const { data: files } = await github.pulls.listFiles({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.issue.number
-            });
-
-            const labels = new Set();
-            for (const file of files) {
-              for (const rule of rules) {
-                for (const pattern of rule.patterns) {
-                  if (minimatch(file.filename, pattern)) {
-                    labels.add(rule.label);
-                  }
-                }
-              }
-            }
-
-            if (labels.size > 0) {
-              await github.issues.addLabels({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                labels: Array.from(labels)
-              });
-            }
+        run: node scripts/apply-labels.js
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
