--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -12,20 +12,40 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.12.0'  # Update to Node.js v18.12.0 or later
-
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Install dependencies
-        run: pnpm install
-
       - name: Apply labels
-        run: node scripts/apply-labels.js
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const rules = [
+              { label: 'migrations', patterns: ['migrations/**'] },
+              { label: 'tests', patterns: ['tests/**'] },
+              { label: 'docs', patterns: ['docs/**'] },
+            ];
+
+            const { data: files } = await github.pulls.listFiles({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number
+            });
+
+            const labels = new Set();
+
+            for (const file of files) {
+              for (const rule of rules) {
+                for (const pattern of rule.patterns) {
+                  if (minimatch(file.filename, pattern)) {
+                    labels.add(rule.label);
+                  }
+                }
+              }
+            }
+
+            if (labels.size > 0) {
+              await github.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                labels: Array.from(labels)
+              });
+            }
